[package]
name = "penlist"
version = "0.0.4"
edition = "2021"
description = "A To-do List console-based application written in Rust."
keywords = ["todo", "list", "cli"]
license-file = "LICENSE"
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/mi66mc/penlist"

[dependencies]
colored = "2.1.0"
