[package]
name = "penlist"
version = "0.1.1"
edition = "2021"
description = "Todo List console based application written in Rust."
keywords = ["todo", "list", "cli"]
license-file = "LICENSE"
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/mi66mc/penlist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term_size = "0.3.2"
